samples/_failures_safe/1761209612_796489_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cf4c65d.c: In function ‘main’:
./samples/SAFE/__tmp_1cf4c65d.c:153:20: error: missing terminating " character
  153 |             printf("No text
      |                    ^~~~~~~~
./samples/SAFE/__tmp_1cf4c65d.c:153:13: error: expected expression at end of input
  153 |             printf("No text
      |             ^~~~~~
./samples/SAFE/__tmp_1cf4c65d.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cf4c65d.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cf4c65d.c:153:13: error: expected declaration or statement at end of input
